--- a/index.html
+++ b/index.html
@@ -76,7 +76,30 @@
         </div>
       </div>
       <!-- main content -->
-      <div class="main-content"></div>
+      <div class="main-content">
+        <div class="story-gallery">
+          <div class="story story1">
+            <img src="images/upload.png" alt="upload" />
+            <p>Post Story</p>
+          </div>
+          <div class="story story2">
+            <img src="images/member-1.png" alt="upload" />
+            <p>Alison</p>
+          </div>
+          <div class="story story3">
+            <img src="images/member-2.png" alt="upload" />
+            <p>Tulha</p>
+          </div>
+          <div class="story story4">
+            <img src="images/member-3.png" alt="upload" />
+            <p>Er</p>
+          </div>
+          <div class="story story5">
+            <img src="images/member-4.png" alt="upload" />
+            <p>John Cenna</p>
+          </div>
+        </div>
+      </div>
       <!-- right sidebar -->
       <div class="right-sidebar">
         <div class="sidebar-title">
